# casewise-vps

./: .cursorignore  .env  .env.example  .gitignore  Dockerfile  README.md  cswslogo.tsx  dcd.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml  rebuild_clean.bat  rebuild_clean.ps1  requirements.txt  simple-dicom-server.py  update instructions  vps-docker-setup.sh
.cursor/rules/: docker-up-down.mdc
cases/: case-001.json
cases/case001/: metadata.json  report.txt
casewise/: __init__.py  config.py  main.py
casewise/ai/: __init__.py  gpt_client.py  prompt_templates.py
casewise/api/: __init__.py
casewise/core/: __init__.py  logger.py
casewise/grading/: __init__.py  grader.py  output_writer.py  qa_flags.py
casewise/models/: __init__.py  api.py  base.py  case.py  grading.py  rubric.py
casewise/rubrics/: __init__.py  loader.py
casewise/utils/: __init__.py  case_loader.py
demo_cases/case001/: metadata.json  report.txt
docker/: orthanc-config.json
docs/: example_output.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  DiagnosticWorkflow.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ohif-viewers/: README.md  nx.json  package-lock.json  package.json  playwright.config.ts  postcss.config.js  preinstall.js  publish-package.mjs  publish-version.mjs  rsbuild.config.ts  tsconfig.json  version.json  version.mjs
ohif-viewers/tests/: 3DFourUp.spec.ts  3DMain.spec.ts  3DOnly.spec.ts  3DPrimary.spec.ts  Angle.spec.ts  AxialPrimary.spec.ts  Bidirectional.spec.ts  Circle.spec.ts  CobbAngle.spec.ts  Crosshairs.spec.ts  DicomTagBrowser.spec.ts  Ellipse.spec.ts  FlipHorizontal.spec.ts  Invert.spec.ts  JumpToMeasurementMPR.spec.ts  Length.spec.ts  Livewire.spec.ts  MPR.spec.ts  Probe.spec.ts  RTHydration.spec.ts  RTHydration2.spec.ts  (+13 more)
rubrics/: TCGA-09-0364_rubric_detailed.json  chest_xray_basic.json  chest_xray_v1.json  ct_abdomen_basic.json  ct_abdomen_v1.json  mri_brain_basic.json  mri_brain_v1.json  tcga_ovarian_cancer.json  ultrasound_obstetric_basic.json  ultrasound_obstetric_v1.json
scripts/: import-dicom.py
source-documents/: README.md
test_scripts/: check_status.py  test_all_endpoints.py  test_docker_config.py  test_grading_debug.py  test_grading_post.py  test_server.py
updater/: update inst 2
(+1476 files in other folders)
